# underfit

./: README.md  colab.ipynb  install.sh  pyproject.toml  underfit-colab.ipynb
dashboard/: index.html  server.py
dashboard/models/sa3-medium/: registry.json
dashboard/models/sa3-sm-music/: registry.json
dashboard/models/sa3-sm-sfx/: registry.json
dataset_processing/: pre_encode.py
underfit/: monitor.py
underfit/backends/: sa3.py
underfit/cli/: setup.py
underfit/training/: demo_step.py  loop.py
underfit/utils/: state_dict.py  stderr_filter.py
